[project]
name = "hive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mingminyu", email = "yu_mingm623@163.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hive = "hive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
